--- a/package.json
+++ b/package.json
@@ -3,15 +3,10 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "node build-util.js",
+    "dev": "node build-util.js --serve",
+    "build": "node build-util.js",
     "serve": "vue-cli-service serve",
-    "build": "vue-cli-service build",
-    "lint": "vue-cli-service lint",
-    "build-android": "vue-cli-service build && cd ./cordova && cordova run android --emulator",
-    "build-android-device": "vue-cli-service build && cd ./cordova && cordova run android",
-    "build-browser": "vue-cli-service build && cd ./cordova && cordova run browser",
-    "build-ios": "vue-cli-service build && cd ./cordova && cordova run ios --emulator",
-    "build-ios-device": "vue-cli-service build && cd ./cordova && cordova run ios --device"
+    "lint": "vue-cli-service lint"
   },
   "dependencies": {
     "core-js": "^3.6.5",
@@ -27,6 +22,7 @@
     "babel-eslint": "^10.1.0",
     "eslint": "^6.7.2",
     "eslint-plugin-vue": "^6.2.2",
+    "fs-extra": "^10.0.0",
     "inquirer": "^8.2.0",
     "vue-template-compiler": "^2.6.11"
   },
