update: 调试打包静态文件集中到 public/dev-build 目录下

--- a/.gitignore
+++ b/.gitignore
@@ -23,8 +23,6 @@ pnpm-debug.log*
 *.sw?
 cordova/www
 .build.json
-public/cordova.js
-public/cordova_plugins.js
-public/ios
-public/android
-public/browser
+public/dev-build/ios
+public/dev-build/android
+public/dev-build/browser
