--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "build": "node build-util.js",
     "serve": "vue-cli-service serve",
     "lint": "vue-cli-service lint",
-    "devand": "node build-util.js --serve --androidDevice"
+    "devand": "node build-util.js --serve --androidDevice",
+    "dev-build": "vue-cli-service build"
   },
   "dependencies": {
     "core-js": "^3.6.5",
